トレーニング

--- a/app/src/main/res/layout/fragment_amphibian_detail.xml
+++ b/app/src/main/res/layout/fragment_amphibian_detail.xml
@@ -14,12 +14,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.amphibians.ui.AmphibianViewModel" />
@@ -35,10 +35,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
+            android:text="@{viewModel.amphibian.name}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Blue Jeans Frog"/>
+            tools:text="Blue Jeans Frog" />
 
         <View
             android:layout_width="match_parent"
@@ -47,7 +48,7 @@
             android:layout_marginEnd="8dp"
             android:background="?attr/dividerHorizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name"/>
+            app:layout_constraintTop_toBottomOf="@id/name" />
 
         <!-- TODO: set the text to the description from the Amphibian object in the view model -->
         <TextView
@@ -55,10 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
+            android:text="@{viewModel.amphibian.description}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
-            tools:text="Bright red body, blue legs"/>
+            tools:text="Bright red body, blue legs" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
